updating the meta tags

--- a/tier5.html
+++ b/tier5.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:og="http://ogp.me/ns#" xmlns:fb="http://www.facebook.com/2008/fbml">
+<html>
+ <!-- xmlns="http://www.w3.org/1999/xhtml" xmlns:og="http://ogp.me/ns#" xmlns:fb="http://www.facebook.com/2008/fbml" -->
 
   <head>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,400italic' rel='stylesheet' type='text/css'>
@@ -16,10 +17,6 @@
     <link  rel="stylesheet" href="footer.css" media="screen" charset="utf-8">
     <link  rel="stylesheet" href="project.css" media="screen" charset="utf-8">
     <link  rel="stylesheet" href="tier5.css" media="screen" charset="utf-8">
-
-    <meta property="og:image" content="http://i68.tinypic.com/2wcib0w.png"/>
-    <meta property="og:title" content="This will be the title displayed!" />
-    <meta property="og:description" content="This will be the description that shows below the title!" />
   </head>
   <body>
       <div id='wrapper'>
