--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     <!-- NOT WORKING -->
     <!-- <meta property="og:image" content= "myimages/home/design-port.png"/> -->
     <!-- ="myimages/home/design-port.png"> -->
+    <meta property="og:image" content="http://i68.tinypic.com/2wcib0w.jpg"/>
+    <meta property="og:title" content="This will be the title displayed!" />
+    <meta property="og:description" content="This will be the description that shows below the title!" />
   </head>
 <body>
   <div id="wrapper">
@@ -191,7 +194,7 @@
     </footer>
     <!-- footer -->
   </div>
-    
+
         <!-- wrapper end tag -->
   </div>
 
