Updating meta tags with image instead of URL

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- NOT WORKING -->
     <!-- <meta property="og:image" content= "myimages/home/design-port.png"/> -->
     <!-- ="myimages/home/design-port.png"> -->
-    <meta property="og:image" content="http://i68.tinypic.com/2wcib0w.jpg"/>
+    <meta property="og:image" content="myimages/home/homepage"/>
     <meta property="og:title" content="This will be the title displayed!" />
     <meta property="og:description" content="This will be the description that shows below the title!" />
   </head>
