add apple ID to meta tags

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:og="http://ogp.me/ns#" xmlns:fb="http://www.facebook.com/2008/fbml">
+<html  xmlns="http://www.w3.org/1999/xhtml" xmlns:og="http://ogp.me/ns#">
 
   <head>
 <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
@@ -8,7 +8,7 @@
     <!-- BOOTSTRAP-Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
 
     <title>Jessica Davies UX Design</title>
     <link  rel="stylesheet" href="home.css" media="screen" charset="utf-8">
@@ -20,9 +20,17 @@
     <!-- NOT WORKING -->
     <!-- <meta property="og:image" content= "myimages/home/design-port.png"/> -->
     <!-- ="myimages/home/design-port.png"> -->
+
+    <meta property="og:title" content="Jessica Davies UX Strategist & Designer"/>
+    <meta property="og:type" content="website"/>
     <meta property="og:image" content="myimages/home/homepage"/>
-    <meta property="og:title" content="This will be the title displayed!" />
-    <meta property="og:description" content="This will be the description that shows below the title!" />
+    <meta property="og:url" content="https://jcdaviesauthor.github.io/portfolio/index.html"/>
+    <meta property="og:site_name" content="Jessica Davies UX Strategist & Designer"/>
+    <meta property="og:description" content="This will be the description that shows below the title!"/>
+    <meta property="og:app_id" content="jcdavies285@me.com"/>
+
+
+
   </head>
 <body>
   <div id="wrapper">
