updating meta tag with new photo bucket url

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <meta property="og:title" content="Jessica Davies UX Strategist & Designer"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:image" content="myimages/home/homepage"/>
+    <meta property="og:image" content="http://s1361.photobucket.com/user/Jc_Davies/library/"/>
     <meta property="og:url" content="https://jcdaviesauthor.github.io/portfolio/index.html"/>
     <meta property="og:site_name" content="Jessica Davies UX Strategist & Designer"/>
     <meta property="og:description" content="This will be the description that shows below the title!"/>
