--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 
     <meta property="og:title" content="Jessica Davies UX Strategist & Designer"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:image" content="http://s1361.photobucket.com/user/Jc_Davies/story"/>
+    <meta property="og:image" content="https://jcdaviesauthor.github.io/portfolio/myimages/home/homepage.png"/>
     <meta property="og:url" content="https://jcdaviesauthor.github.io/portfolio/index.html"/>
     <meta property="og:site_name" content="Jessica Davies UX Strategist & Designer"/>
     <meta property="og:description" content="This will be the description that shows below the title!"/>
-    <meta property="og:app_id" content="jcdavies285@me.com"/>
+    <!-- <meta property="og:app_id" content="jcdavies285@me.com"/> -->
 
 
 
