new home page meta tag

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <meta property="og:title" content="Jessica Davies UX Strategist & Designer"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:image" content="https://jcdaviesauthor.github.io/portfolio/myimages/about/me.jpg"/>
+    <meta property="og:image" content="https://jcdaviesauthor.github.io/portfolio/myimages/home/homepage.png"/>
     <meta property="og:url" content="https://jcdaviesauthor.github.io/portfolio/index.html"/>
     <meta property="og:site_name" content="Jessica Davies UX Strategist & Designer"/>
     <meta property="og:description" content="This will be the description that shows below the title!"/>
