--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
     <!-- <meta property="og:image" content= "myimages/home/design-port.png"/> -->
     <!-- ="myimages/home/design-port.png"> -->
 
-    <meta property="og:title" content="Jessica Davies UX Strategist & Designer"/>
+    <meta property="og:title" content="Jessica Davies Strategist &amp UX Designe"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:image" content="https://jcdaviesauthor.github.io/portfolio/myimages/home/homepage.png"/>
+    <meta property="og:image" content="https://jcdaviesauthor.github.io/portfolio/myimages/home/homepage2.png"/>
     <meta property="og:url" content="https://jcdaviesauthor.github.io/portfolio/index.html"/>
-    <meta property="og:site_name" content="Jessica Davies UX Strategist & Designer"/>
-    <meta property="og:description" content="This will be the description that shows below the title!"/>
-    <meta property="og:app_id" content="jcdavies285@me.com"/>
+    <meta property="og:site_name" content="Jessica Davies Strategist &amp UX Designer"/>
+    <meta property="og:description" content="This is the portfolio XXXX"/>
+    <meta property="og:app_id" content="doublewidepublications@gmail.com"/>
 
 
 
