adjusting photo size

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
     <!-- <meta property="og:image" content= "myimages/home/design-port.png"/> -->
     <!-- ="myimages/home/design-port.png"> -->
 
-    <meta property="og:title" content="Jessica Davies Strategist &amp UX Designe"/>
+    <meta property="og:title" content="Jessica Davies Strategist & UX Designe"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:image" content="https://jcdaviesauthor.github.io/portfolio/myimages/home/homepage3.png"/>
+    <meta property="og:image" content="https://jcdaviesauthor.github.io/portfolio/myimages/home/homepage4.png"/>
     <meta property="og:url" content="https://jcdaviesauthor.github.io/portfolio/index.html"/>
-    <meta property="og:site_name" content="Jessica Davies Strategist &amp UX Designer"/>
+    <meta property="og:site_name" content="Jessica Davies Strategist & UX Designer"/>
     <meta property="og:description" content="This is the portfolio XXXX"/>
     <meta property="og:app_id" content="doublewidepublications@gmail.com"/>
 
