Adding user testing section to design

--- a/tier5.html
+++ b/tier5.html
@@ -323,74 +323,51 @@
 
       <div><p class="statement">Recommendations</p></div>
 
-      <div class="circleRecWrapper">
+        <div class="circleRecWrapper">
 
-      <div class= "allRecCircle">
-        <div class="recCircle">
-        <p class="circleRecText"><b>Allow direct individual searchs:</b> on-demand search for contact information for one-off targets</p>
+        <div class= "allRecCircle">
+          <div class="recCircle">
+          <p class="circleRecText"><b>Allow direct individual searchs:</b> on-demand search of contact information for one-off targets</p>
+          </div>
+          <div class="recCircle"><p class="circleRecText"><b>Create nuturing capabilities:</b> individual profiles with news, interests, education, and other info</p></div>
+          <div class="recCircle"><p class="circleRecText"><b>Integrate technology solution:</b> allow customers to see what technologies used by their targets </p></div>
+          <div class="recCircle"><p class="circleRecText"><b>Continue with the low-cost provider strategy</b>, "Walmart" for leads </p></div>
         </div>
-        <div class="recCircle"><p class="circleRecText"><b>Create nuturing capabilities:</b> individual profiles with news, interests, education, and other info</p></div>
-        <div class="recCircle"><p class="circleRecText"><b>Integrate technology solution:</b> allow customers to see what technologies used by their targets </p></div>
-        <div class="recCircle"><p class="circleRecText"><b>Continue with the low-cost provider strategy</b>, "Walmart" for leads </p></div>
-      </div>
       </div>
 
       <div class="pieIntro">
-        <div class="pieIntro25 pieIntroSec">
+
+        <div class="pies pieIntroSec">
           <p class="pieIntroTitle octoOrange">Tier 5's Current Offering</p>
           <p class="pieIntroSubTitle">Only Low Touch, High Volume</p>
-          <p class="pieText">Only 25% of salespeople</p>
+          <p class="pieText">Reaches small percentage of  salespeople</p>
+          <img class="pieItem pieItem25" alt="Pie Chart 25%" src="myimages/tier5/strategy/pie25.png">
         </div>
-        <div class="pieIntro75 pieIntroSec">
-          <p class="pieIntroTitle octoOrange"> Our Strategic Recommendation</p>
-          <p class="pieIntroSubTitle">Address High Touch, Low Volume</p>
-          <p class="pieText">Add "Nuturing Capabilities" &amp Individual Search</p>
-          <p class="pieText">75% of salespeople</p>
-        </div>
-        <div class="pieIntro100 pieIntroSec">
-          <p class="pieIntroTitle octoOrange">The New Tier 5 OutBound Sale Tool</p>
-          <p class="pieIntroSubTitle">Reaches 100% of the addressable market</p>
-        </div>
-      </div>
 
-      <div class="pies">
-        <img class="pieItem pieItem25" alt="Pie Chart 25%" src="myimages/tier5/strategy/pie25.png">
-        <img class="pieSign piePlus" alt="Plus Sign" src="myimages/tier5/strategy/plus.png">
-        <img class="pieItemBig" alt="Pie Chart 75%" src="myimages/tier5/strategy/pie75.png">
-        <img class="pieSign pieEqual" alt="Equals Sign" src="myimages/tier5/strategy/equals.png">
-        <img class="pieItemBig pieItem100" alt="Pie Chart 100%" src="myimages/tier5/strategy/pie100.png">
-      </div>
-
-<!-- ALTERNATIVE WAY TO DO PIES ALL IN SAME DIV -->
-      <!-- <div class="pieIntro">
-        <div class="pieIntro25 pieIntroSec">
-          <p class="pieIntroTitle octoOrange">Tier 5's Current Offering</p>
-          <p class="pieIntroSubTitle">Only Low Touch, High Volume</p>
-          <p class="pieText">Only 25% of salespeople</p>
-          <img class="pieItem" alt="Pie Chart 25%" src="myimages/tier5/strategy/pie25.png">
-        </div>
         <div class="operators pieIntroSec">
-        <div class="blank"></div><div><img class="pieSign piePlus" alt="Plus Sign" src="myimages/tier5/strategy/plus.png"></div>
-      </div>
-        <div class="pieIntro75 pieIntroSec">
+          <div class="blank"></div><div><img class="pieSign piePlus" alt="Plus Sign" src="myimages/tier5/strategy/plus.png"></div>
+        </div>
+
+        <div class="pies pieIntroSec">
           <p class="pieIntroTitle octoOrange"> Our Strategic Reccommendation</p>
           <p class="pieIntroSubTitle">Address High Touch, Low Volume</p>
-          <p class="pieText">Add "Nuturing Capabilities" & Individual Search</p>
-          <p class="pieText">75% of salespeople</p>
-          <img class="pieItemBig pieItem" alt="Pie Chart 75%" src="myimages/tier5/strategy/pie75.png">
-        </div>
-        <div class="operators pieIntroSec">
-        <div class="blank"></div> <div>
-        <img class="pieSign pieEqual" alt="Equals Sign" src="myimages/tier5/strategy/equals.png">
+          <p class="pieText">Add "nuturing capabilities" & individual search</p>
+          <img class="pieItem pieItem75" alt="Pie Chart 75%" src="myimages/tier5/strategy/pie75.png">
         </div>
 
+        <div class="operators pieEqual pieIntroSec">
+          <div class="blank"></div> <div>
+          <img class="pieSign " alt="Equals Sign" src="myimages/tier5/strategy/equals.png">
+          </div>
         </div>
-        <div class="pieIntro100 pieIntroSec">
+
+        <div class="pies pieIntroSec">
           <p class="pieIntroTitle octoOrange">The New Tier 5 OutBound Sale Tool</p>
           <p class="pieIntroSubTitle">Reaches 100% of the addressable market</p>
-          <img class="pieItemBig pieItem" alt="Pie Chart 100%" src="myimages/tier5/strategy/pie100.png">
+          <p class="pieText">Meeting all client needs, reaching larger market </p>
+          <img class="pieItem" alt="Pie Chart 100%" src="myimages/tier5/strategy/pie100.png">
         </div>
-      </div> -->
+      </div>
 
     <div class="processSectionTitle" id="researchSection">Research &amp Discovery</div>
 
@@ -758,6 +735,8 @@
 
 <div class="statement statmentOrange">Our solution: two high level experiences</div>
 
+<!-- col-xs-offset-1 col-xs-11 col-sm-offset-1 col-sm-5 -->
+
 <div class="experiences">
   <div class="realTimeAndNur realTime">
     <img class="pillar" alt="Pillar" src="myimages/tier5/synthesis/pillar.png">
@@ -791,10 +770,9 @@
 
 </div>
 
-
   <div class="statement featureMargins">Initial Concept &amp Features</div>
 <div class="features row">
-  <div class="realTimeAndNur2 col-xs-offset-1 col-xs-11 col-sm-offset-1 col-sm-5">
+  <div class="realTimeAndNur2 col-xs-offset-1 col-xs-11 col-sm-6 col-md-6 col-lg-offset-1 col-lg-5">
         <p class="experienceTitle">Real-Time Connections</p>
         <div class="iconSentence">
           <img class="featureIcon" alt="Funnel Icon" src="myimages/tier5/design/funnel-icon.png">
@@ -818,7 +796,7 @@
         </div>
       </div>
 
-  <div class="realTimeAndNur2 col-xs-12 col-sm-6">
+  <div class="realTimeAndNur2 col-xs-offset-1 col-xs-11 col-sm-6 col-md-6 col-lg-offset-1 col-lg-5">
       <div class="nurtureValign">
           <p class="experienceTitle">Nurturing Connections</p>
           <div class="iconInline">
@@ -827,18 +805,39 @@
           </div>
           <div class="iconInline">
             <img class="featureIcon" alt="Sort Icon" src="myimages/tier5/design/search-icon.png">
-            <p class="experienceSentence2">Individual search, find Bob Smith&#39;s email now! </p>
+            <p class="experienceSentence2">Individual search, find a client&#39;s email now! </p>
           </div>
           <div class="iconInline">
             <img class="featureIcon" alt="Connect Icon" src="myimages/tier5/design/connect-icon.png">
-            <p class="experienceSentence2">Connectivity view, assess their relationships</p>
+            <p class="experienceSentence2">Connectivity view, assess relationships</p>
           </div>
       </div>
   </div>
   <!-- features -->
 </div>
 
-  <div class="statement featureMargins">User Testing</div>
+<div class="statement featureMargins">User Testing</div>
+
+<div class="testingCircleSec">
+  <div class="userTestingRounds"><p >Three Rounds</p></div>
+  <div class="testingCircles circle1"></div>
+  <div class="testingCircles circle2"></div>
+  <div class="testingCircles circle3"></div>
+</div>
+
+<div class="prototypes">
+  <div class="prototypeImgDiv">
+    <img class="prototypeImg" alt="Paper Prototype" src="myimages/tier5/design/paper-proto.png">
+  </div>
+
+  <div class="prototypeImgDiv">
+  <img class="prototypeImg" alt="Low Fidelity Prototype" src="myimages/tier5/design/low-fid-proto.png">
+  </div>
+
+  <div class="prototypeImgDiv">
+  <img class="prototypeImg" alt="Medium Fidelity Prototype" src="myimages/tier5/design/med-fid-proto.png">
+  </div>
+</div>
 
 <div class="processSectionTitle">Build &amp Deliver</div>
 
