--- a/tier5.html
+++ b/tier5.html
@@ -591,6 +591,68 @@
 
   <p class="statement">Our personas datail the two main types of salespeople</p>
 
+<!-- new table for personas -->
+<table>
+    <p class="personaTypes"> High Volume, Low Touch</p>
+  <tbody>
+  <tr>
+      <td>
+          <img class="ajay" alt="Picture of a Man" src="myimages/tier5/synthesis/ajay.png">
+      </td>
+
+      <td class="textBoxName ajayName padding">
+        <p class="SalesmanName boxTitles">Ajay</p>
+        <p>Age: 26</p>
+        <p>Location: New York City, NY</p>
+        <p>Marital Status: Single</p>
+        <p>Occupation: Sales Hacker</p>
+      </td>
+
+      <td class="textBoxQuote textBoxQuoteAjay padding">
+        <p class="quoteP">&#34;I need leads by the bucketful, not the handful&#34;
+      </td>
+
+  </tr>
+
+  <tr>
+    <td class="textBoxGoals padding">
+      <p class="boxTitles">Goals</p>
+        <p>- Save time </p>
+        <p>- Meet agressive sales targets</p>
+        <p>- Get commission</p>
+    </td>
+    <td class="textBoxFrustrations padding">
+        <p class="boxTitles">Frustrations</p>
+        <p>- 50% of day spent prospecting</p>
+        <p>- Relies on email marketing,
+        only 5% response rate</p>
+        <p>- Overseas fact checkers slow</p>
+    </td>
+    <td class="textBoxTech padding">
+      <p class="boxTitles">Technology</p>
+        <p>- Infusionsoft</p>
+        <p>- Datanyze</p>
+        <p>- ZoomInfo</p>
+        <p>- Hoovers</p>
+        <p>- LinkedIn</p>
+    </td>
+  </tr>
+
+  </tbody>
+</table>
+
+<div >
+
+
+</div>
+
+<div >
+
+
+
+
+
+
   <div class="personas row">
 
 <div class="personaAjayBrad col-md-12 col-lg-6">
