Add portfolio description

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <meta property="og:image" content="https://jcdaviesauthor.github.io/portfolio/myimages/home/homepage7.png"/>
     <meta property="og:url" content="https://jcdaviesauthor.github.io/portfolio/index.html"/>
     <meta property="og:site_name" content="Jessica Davies Strategist & UX Designer"/>
-    <meta property="og:description" content="This is the portfolio XXXX"/>
+    <meta property="og:description" content="The portfolio outlines the detailed design process of Jessica Davies."/>
     <meta property="og:app_id" content="doublewidepublications@gmail.com"/>
 
   </head>
@@ -47,8 +47,6 @@
               </div>
             </div>
 
-          <!-- <nav id = "navHome" class="navbar navbar-light bg-faded"> -->
-
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <!-- <a class="navbar-brand" href="#">Responsive navbar</a> -->
               <ul id="navUl" class="nav-inline nav navbar-nav">
@@ -62,7 +60,6 @@
         </nav>
           <div class="clearFix"></div>
       </header>
-      <!-- <a href="index.html"><img id="jdLogo" alt="Designers Logo" src="myimages/home/jd-logo.png"><a/> -->
       <a href="index.html"><img id="jdLogo" alt="Designers Logo" src="myimages/home/jd-logo.png"></a>
     </div>
 
@@ -85,7 +82,6 @@
     <div id="section1">
       <div class="flip-container containerLeft" ontoucstart="this.classList.toggle('hover');">
         <div class="flipper">
-
               <div class="front light">
                     <div><img id="octo" alt="Tier 5 Octopus Logo" src="myimages/home/tier5-hula-right.png"></div>
               </div>
