Edit meta tage for FB

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <meta property="og:image" content="https://jcdaviesauthor.github.io/portfolio/myimages/home/homepage7.png"/>
     <meta property="og:url" content="https://jcdaviesauthor.github.io/portfolio/index.html"/>
     <meta property="og:site_name" content="Jessica Davies Strategist & UX Designer"/>
-    <meta property="og:description" content="The portfolio outlines my background and detailed UX Design process."/>
+    <meta property="og:description" content="This portfolio outlines my background and detailed UX Design process."/>
     <meta property="og:app_id" content="doublewidepublications@gmail.com"/>
 
   </head>
