Improving the responsiveness of features, media queries not 100% successful

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     <!-- <li class="liInline"><img id="iconTier"class ="icon" alt="Picture of World" src="myimages/home/web-logo-dark.png"></li> -->
 
                   </ul>
-                  <p class="projectDes darkText" style="text-align:left">Re-designed all aspects of start-up's outbound web-based sales platform. Increased market opporunity by 3x.</p>
+                  <p class="projectDes darkText" style="text-align:left">Re-designed all aspects of start-up's outbound web-based sales platform. Increased market opportunity by 3x.</p>
                   <button class="darkButton backButton" type="button" onclick="location.href='tier5.html';">see more</button>
                 </div>
               </div>
@@ -115,7 +115,7 @@
                         <!-- WILL NEED TO ADD THI BACK -->
                       <!-- <li class="liInline"><img id="iconWebMd" class ="icon" alt="iPhone icon" src="myimages/home/iphone-logo-light.png"></li> -->
                     </ul>
-                    <p class="projectDes lightText" style="text-align:left">Designed native app &amp; companion wearable that generates news and information taylored to your own personal biotatistics.</p>
+                    <p class="projectDes lightText" style="text-align:left">Designed native app &amp; companion wearable that generates news and information tailored to your own personal biostatistics.</p>
                     <button class="lightButton backButton" type="button" onclick="location.href='webmd.html';">see more</button>
 
                   </div>
@@ -162,7 +162,7 @@
                   <!-- WILL NEED TO ADD THI BACK -->
                 <!-- <li class="liInline"><img id="iconBunny" class ="icon" alt="World icon" src="myimages/home/web-logo-dark.png"></li> -->
               </ul>
-              <p class="projectDes darkText" style="text-align:left">Created, designed, &amp; coded this site to help people to learn how to use emojis as my final project in my front end web development course.</p>
+              <p class="projectDes darkText" style="text-align:left">Created, designed, &amp; coded a site to help people to learn how to use emojis as my final project in my front-end web development course.</p>
 
               <button class="darkButton backButton" type="button" onclick="location.href='emoji-libs-port.html';">see more</button>
             </div>
