--- a/tier5.html
+++ b/tier5.html
@@ -51,7 +51,6 @@
           </nav>
             <div class="clearFix"></div>
         </header>
-                <!-- <a href="index.html"><img id="jdLogo" alt="Designers Logo" src="myimages/home/jd-logo.png"><a/> -->
               <a href="index.html"><img id="jdLogo" alt="Designers Logo" src="myimages/home/jd-logo.png"></a>
             </div>
             <!-- header class div -->
@@ -59,13 +58,14 @@
 
       <div id="content">
         <div id="projectTitleBox" class="titleBackground container">
-
-          <div class= "container image-swap">
+<!-- a was div -->
+          <a class= "container image-swap" href="#">
             <img class="projectLogo" class="picone" alt="Tier 5 Octopus Logo" src="myimages/home/tier5-hula-right.png">
             <img class="projectLogo" class="pictwo" alt="Tier 5 Octopus Logo" src="myimages/tier5/introduction/tier5-hula-left.png">
-          </div>
+          </a>
 
             <p class="projectTitleSize" id="projectTitle">Tier5 Outbound Sales Lead Generating Platform</p>
+
         </div>
         <div class="introBoxes row">
           <div class="introBox col-xs-6 ">
@@ -709,7 +709,8 @@ old code
 <div class="statement statmentOrange">Our solution: two high level experiences</div>
 
 <div class="experiences">
-  <div class="realTimeAndNur realTime">
+  <div class="realTimeAndNur">
+    <!-- col-xs-12 col-sm-6 -->
     <img class="pillar" alt="Pillar" src="myimages/tier5/synthesis/pillar.png">
     <div class="experienceText">
       <p class="experienceTitle">Real-Time Connections</p>
@@ -718,6 +719,7 @@ old code
   </div>
 
   <div class="realTimeAndNur">
+    <!-- col-xs-12 col-sm-6 -->
       <img class="pillar" alt="Pillar" src="myimages/tier5/synthesis/pillar.png">
       <div class="experienceText">
         <p class="experienceTitle">Nurturing Connections</p>
@@ -743,7 +745,7 @@ old code
 
   <div class="statement featureMargins">Initial concept &amp features</div>
 <div class="features row">
-  <div class="realTimeAndNur2 col-xs-offset-1 col-xs-11 col-sm-6 col-md-6 col-lg-offset-1 col-lg-5">
+  <div class="realTimeAndNur2 col-xs-offset-1 col-xs-11 col-sm-offset-0 col-sm-6 col-lg-offset-1 col-lg-5 realTime">
         <p class="experienceTitle">Real-Time Connections</p>
         <div class="iconSentence">
           <img class="featureIcon" alt="Funnel Icon" src="myimages/tier5/design/funnel-icon.png">
@@ -767,10 +769,10 @@ old code
         </div>
       </div>
 
-  <div class="realTimeAndNur2 col-xs-offset-1 col-xs-11 col-sm-6 col-md-6 col-lg-offset-1 col-lg-5">
-      <div class="nurtureValign">
-          <p class="experienceTitle">Nurturing Connections</p>
-          <div class="iconInline">
+  <div class="realTimeAndNur2 col-xs-offset-1 col-xs-11 col-sm-offset-0 col-sm-6  col-lg-offset-1 col-lg-5 ">
+    <div class="nurtureValign">
+            <p class="experienceTitle">Nurturing Connections</p>
+            <div class="iconInline">
             <img class="featureIcon" alt="RSS Icon" src="myimages/tier5/design/rss-icon.png">
             <p class="experienceSentence2">Newsfeed to keep tabs on lead&#39;s activities</p>
           </div>
@@ -783,7 +785,7 @@ old code
             <p class="experienceSentence2">Connectivity view, assess relationships</p>
           </div>
       </div>
-  </div>
+    </div>
   <!-- features -->
 </div>
 
