--- a/tier5.html
+++ b/tier5.html
@@ -71,7 +71,7 @@
           <div class="introBox col-xs-6 ">
             <!-- <div class="center-block"> -->
             <p class="boxTitle">The Client</p>
-            <p class="boxText heavyText">Tier5, an early stage start-up, engaged us to give their outbound sales-lead generating platform a visual facelift. But after our extenisive research we found their UX Design and even part of their business model also needed a rebuild. Our redesign increased their market opportunity by 3x.
+            <p class="boxText heavyText">Tier5, an early stage start-up, engaged us to give their outbound sales-lead generating platform a visual facelift. But after our extensive research we found the Company's UX Design and even part of their business model also needed a rebuild. Our redesign increased their market opportunity by 3x.
           </p>
             <!-- </div> -->
           </div>
@@ -79,7 +79,7 @@
           <div class="introBox col-xs-6 col-md-offset-1">
               <!-- <div class="center-block"> -->
             <p class="boxTitle">My Role</p>
-            <p class="boxText heavyText">Over 2 a two-week period our very close-knit, two-person team worked collaberatively on every aspect of UX Design process: research, hueristic evaluation, compatitive analysis, user interviews, user testing,design, sketching, protoytyping, and presenting our work.
+            <p class="boxText heavyText">Over 2 a two-week period our very close-knit, two-person team worked collaboratively on every aspect of UX Design process: research, heuristic evaluation, competitive analysis, user interviews, user testing, design, sketching, prototyping, and presenting our work.
           </p>
         <!-- </div> -->
       </div>
@@ -113,22 +113,21 @@
               <div class="approachCircle approachCircle4"><p class="approachNumber approachNumber4">4</p></div>
           </div>
 
-
           <div class="approachSections">
             <div class="approachText">
               <div class="approachPoints"><p>Always Consider the Business Needs &amp Goals</p></div>
-              <div class="approachSubPoints"><p>Start with the Business first<br>Increase Aquisition and Retention</br></p></div>
+              <div class="approachSubPoints"><p>Start with the business first<br>Increase acquisition and retention</br></p></div>
             </div>
 
             <div class="approachText">
               <div class="approachPoints"><p>Extensive Competitive Review</p></div>
-              <div class="approachSubPoints"><p>How salespeople think we stack up to the competition?
+              <div class="approachSubPoints"><p>How do salespeople think we stack up to the competition?
               <br>Do we have the right business model?</br></p></div>
             </div>
 
             <div class="approachText">
               <div class="approachPoints"><p>In-depth Understanding of the User</p></div>
-              <div class="approachSubPoints"><p>Understand How sales people seek and use lead information</p></div>
+              <div class="approachSubPoints"><p>Understand how sales people seek and use lead information</p></div>
             </div>
 
             <div class="approachText">
@@ -223,7 +222,7 @@ old code
         <td class="blank"></td>
         <td>Tier5</td>
         <td>ZoomInfo</td>
-        <td>Datanize</td>
+        <td>Datanyze</td>
         <td>data.com</td>
         <td>InsideView</td>
       </tr>
@@ -363,9 +362,9 @@ old code
 
         <div class= "allRecCircle">
           <div class="recCircle">
-          <p class="circleRecText"><b>Allow direct individual searchs:</b> on-demand search of contact information for one-off targets</p>
+          <p class="circleRecText"><b>Allow direct individual searches:</b> on-demand search of contact information for one-off targets</p>
           </div>
-          <div class="recCircle"><p class="circleRecText"><b>Create nuturing capabilities:</b> individual profiles with news, interests, education, and other info</p></div>
+          <div class="recCircle"><p class="circleRecText"><b>Create nurturing capabilities:</b> individual profiles with news, interests, education, and other info</p></div>
           <div class="recCircle"><p class="circleRecText"><b>Integrate technology solution:</b> allow customers to see what technologies used by their targets </p></div>
           <div class="recCircle"><p class="circleRecText"><b>Continue with the low-cost provider strategy</b>, "Walmart" for leads </p></div>
         </div>
@@ -385,9 +384,9 @@ old code
         </div>
 
         <div class="pies pieIntroSec">
-          <p class="pieIntroTitle octoOrange"> Our Strategic Reccommendation</p>
+          <p class="pieIntroTitle octoOrange"> Our Strategic Recommendations</p>
           <p class="pieIntroSubTitle">Address High Touch, Low Volume</p>
-          <p class="pieText">Add "nuturing capabilities" & individual search</p>
+          <p class="pieText">Add "nurturing capabilities" & individual search</p>
 
           <img class="pieItem pieItem75" alt="Pie Chart 75%" src="myimages/tier5/strategy/pie75.png">
         </div>
@@ -399,7 +398,7 @@ old code
         </div>
 
         <div class="pies pieIntroSec">
-          <p class="pieIntroTitle octoOrange">The New Tier 5 OutBound Sale Tool</p>
+          <p class="pieIntroTitle octoOrange">The New Tier 5 Outbound Sale Tool</p>
           <p class="pieIntroSubTitle">Reaches 100% of the addressable market</p>
           <p class="pieText">Meeting all client needs, reaching larger market </p>
           <img class="pieItem" alt="Pie Chart 100%" src="myimages/tier5/strategy/pie100.png">
@@ -432,7 +431,7 @@ old code
 
           <div class="researchDes heavyText researchInline">
           <p>
-          The interview process gave us a more in-depth perspective about how salespeople go about nuturing clients and upselling.
+          The interview process gave us a more in-depth perspective about how salespeople go about nurturing clients and up selling.
           </p>
           </div>
         </div>
@@ -471,7 +470,7 @@ old code
     </div>
 
     <div class= "square heavyText">
-      <p>&#34;Approaching any lead takes lots of sweat, dilligence and calling in favors.&#34;
+      <p>&#34;Approaching any lead takes lots of sweat, diligence  and calling in favors.&#34;
       </p>
       </div>
 
@@ -481,7 +480,7 @@ old code
 
   <div class="squareRecSec recPaddimg">
     <div class="rec rec2">
-      <p>Finding contact information is time consuming
+      <p>Finding contact information is time consuming.
       </p>
     </div>
 
@@ -497,7 +496,7 @@ old code
   <div class="squareRecSec recPaddimg">
 
     <div class="rec rec3">
-      <p>Want distilled, revlevent, personal information
+      <p>Want distilled, relevant, personal information
       </p>
     </div>
 
@@ -533,7 +532,7 @@ old code
     </div>
 
     <div class= "square heavyText">
-      <p>&#34;You can&#39;t waste time with millennials. You have to tailor your communications to their behavior.&#34;
+      <p>&#34;You can&#39;t waste time with Millennials. You have to tailor your communications to their behavior.&#34;
       </p>
       </div>
 
@@ -579,7 +578,7 @@ old code
   <img class="journeyMap" alt="Salesperson's Journey Map" src="myimages/tier5/synthesis/journey-map.png">
 </div>
 
-  <p class="statement">Our personas datail the two main types of salespeople</p>
+  <p class="statement">Our personas detail the two main types of salespeople</p>
 
 <div class="row">
   <!-- Ajay -->
@@ -609,7 +608,7 @@ old code
     <td class="textBoxGoals padding">
       <p class="boxTitles">Goals</p>
         <p>- Save time </p>
-        <p>- Meet agressive sales targets</p>
+        <p>- Meet aggressive sales targets</p>
         <p>- Get commission</p>
     </td>
     <td class="textBoxFrustrations padding">
@@ -660,14 +659,14 @@ old code
       <p>- Nurture client relationships</p>
       <p>- Stay &#34;top of mind&#34;</p>
       <p>- Meet sales targets</p>
-      <p>- Upsell clients</p>
+      <p>- Up sell clients</p>
     </td>
     <td class="textBoxFrustrations padding">
         <p class="boxTitles">Frustrations</p>
         <p>- Limited bandwidth</p>
         <p>- Long time to execute sale</p>
         <p>- 3 to 5+ tools required to find lead</p>
-        <p>- Finding "nuture" info</p>
+        <p>- Finding "nurture" info</p>
     </td>
     <td class="textBoxTech padding">
       <p class="boxTitles">Technology</p>
@@ -850,7 +849,7 @@ old code
     </div>
   </div>
 
-<div><p class="statement">Usability testing: salepeople feedback</p></div>
+<div><p class="statement">Usability testing: salespeople feedback</p></div>
 
 <div class="top3Bottom3">
 
@@ -938,12 +937,12 @@ old code
 <!-- grandparents
 </div> -->
 
-<div><p class="statement">Usability testing findings</p></div>
+<div><p class="statement">Usability test findings</p></div>
 <div class="findings2PParent">
 
-  <div class="findings2P heavyText">
+  <div class="findings2P heavyText ">
     <p>
-    <b>The usability testing supported our business model recomendations.</b> We saw how our two personas would use the site, but the testing also added another layer of information: many people were also a hybrid of the two. This confirmed our original hypothesis that Tier5 really needed to offer both products (volume leads and individual leads). They can not flourish on just the volume leads (25% of the market).
+    <b>The usability testing supported our business model recommendations.</b> We saw how our two personas would use the site, but the testing also added another layer of information: many people were also a hybrid of the two. This confirmed our original hypothesis that Tier5 really needed to offer both products (volume leads and individual leads). They cannot flourish on just the volume leads (25% of the market).
     </p>
     </div>
 
@@ -954,13 +953,78 @@ old code
   </div>
 </div>
 
-
 <div><p class="statement statmentOrange">Design decisions</p></div>
 
-<!-- statmentOrange -->
+<div class="designDecisions">
+
+  <div class="decNumbers">
+      <div class="decCircle decCircle1"><p class="decNumber">1</p></div>
+      <div class="decCircle decCircle2"><p class="decNumber">2</p></div>
+      <div class="decCircle decCircle3"><p class="decNumber decNumber3">3</p></div>
+  </div>
+
+  <div class="decSections">
+    <div class="decText">
+      <div class="decPoints"><p>Give the salesperson more control over their lead list.</</p></div>
+
+      <div class="approachSubPoints heavyText"><p>Allow them to accept, reject, sort, and re-filter their lists until they are satisfied that they have gotten what they need as well as their money&#39;s worth.</p></div>
+
+      <div class="approachSubPoints heavyText">
+        <p>- Create a new target search page with better options</p></div>
+
+      <div class="approachSubPoints heavyText">
+        <p>- Created an ability to archive lists so that salespeople could review prior searches and be assure they always received fresh new leads</p></div>
+
+    </div>
+
+    <div class="decText">
+      <div class="decPoints">
+        <p>Keep the UI fun, fresh and young.</p>
+      </div>
+
+      <div class="approachSubPoints heavyText">
+        <p>Tier5 is run by Millennials and many of their client come to them for twitter, Klout, and other offerings that help in marketing to Millennials so changing the look, logo and attitude of the UI to match the fresh young organization made good sense.</p>
+      </div>
+
+      <div class="approachSubPoints heavyText">
+        <p>- Recreated landing page to offer a new, fresh, fun perspective and what the salesperson really wants - to work less.</p>
+      </div>
+      <div class="approachSubPoints heavyText">
+        <p>- Completely redesigned/recreated the company logo</p>
+      </div>
+    </div>
+
+    <div class="decText">
+      <div class="decPoints"><p>The ever-moving NAV.</div>
+        <div class="approachSubPoints heavyText"><p>We tested 5+ different versions of the NAV and the list components, but finally found a combination that most people found to be clear and easy to use.</p></div>
+      </div>
+  <!-- decSections -->
+</div>
+<!-- design decisions -->
+</div>
 
 <!-- BUILD AND DELIVER -->
 <div class="processSectionTitle">Build &amp Deliver</div>
+
+<div class="build">
+    <p class="buildText">Our final interactive wireframes encompass a number of features, including a quick and easy on-boarding for new clients, multiple views, a connectivity layout via an API with LinkedIn, a lead newsfeed, sorting capabilities, analytics, and an individual search engine.</p>
+</div>
+
+<div><p class="statement statmentOrange">Before &amp After</p></div>
+
+<div class="comparisons">
+  <div class="listView">
+        <p class="comparisonTitle">Former List View</p>
+        <img class="listViewImg" alt="Old List View" src="myimages/tier5/build/former-list-view2.png">
+  </div>
+
+
+  <div class="listView">
+      <p class="comparisonTitle comparisonTitle2">Current List View</p>
+      <img class="listViewImg" alt="New List View" src="myimages/tier5/build/new-list-view.png">
+  </div>
+
+  </div>
 
 <div class="portArrowBottomSec processSectionTitleUpNext">
   <div class="col-xs-12 col-sm-4 col-md-5 col-lg-6 ">Up Next</div>
@@ -973,8 +1037,7 @@ old code
     </a>
   </div>
 </div>
-
-
+<div>
 
 <!-- content div -->
 </div>
