--- a/tier5.html
+++ b/tier5.html
@@ -322,27 +322,27 @@ old code
       <!--COST PER LEAD -->
       <tr class="compTableLines">
         <td class="leftSideTitles">Price/lead</td>
-        <td class="compTableText heavyText">
+        <td class="compTableText heavyText weakColor">
           <ul class="cost">
             <li>$0.35-0.66</li>
           </ul class="cost">
         </td>
-        <td class="compTableText heavyText">
+        <td class="compTableText heavyText weakColor">
           <ul class="cost">
             <li>$1.25</li>
           </ul>
         </td>
-        <td class="compTableText heavyText">
+        <td class="compTableText heavyText weakColor">
           <ul class="cost">
-            <li></li>
+            <li>N/A</li>
           </ul>
         </td>
-        <td class="compTableText heavyText">
+        <td class="compTableText heavyText weakColor">
           <ul class="cost">
             <li>$0.41-0.50</li>
           </ul>
         </td>
-        <td class="compTableText heavyText">
+        <td class="compTableText heavyText weakColor">
           <ul class="cost">
             <li>$0.99</li>
           </ul>
@@ -1026,6 +1026,7 @@ old code
 
   </div>
 
+<!-- NEXT PORTFOLIO SECTION -->
 <div class="portArrowBottomSec processSectionTitleUpNext">
   <div class="col-xs-12 col-sm-4 col-md-5 col-lg-6 ">Up Next</div>
   <!-- col-sm-5 -->
