--- a/webmd.html
+++ b/webmd.html
@@ -63,6 +63,21 @@
 
     <img id="catburrito" alt="cat burrito" src="myimages/cat-burrito.jpg">
       <a href="https://c1.staticflickr.com/3/2389/2073509907_345ad52bc1.jpg">Source</a>
+
+<!-- BOTTOM ARROW TO NEXT PORTFOLIO -->
+      <div class="portArrowBottomSec processSectionTitleUpNext processSectionTitleUpNextWeb">
+        <div class="col-xs-12 col-sm-4 col-md-5 col-lg-6 ">Up Next</div>
+        <!-- col-sm-5 -->
+        <div class="col-xs-12 col-sm-8 col-md-offset-1 col-md-6 col-lg-offset-1 col-lg-5">
+          <!-- col-sm-offset-1 col-sm-6  -->
+          <a href="beauty.html">
+            <p class="nextPort arrowAndText">Beauty Cures</p>
+            <img class="arrowPort arrowAndText" alt="Connect Icon" src="myimages/arrow-port.png">
+          </a>
+        </div>
+      </div>
+
+  <!-- CONTENT DIV     -->
 </div>
 
 <div id="footer">
